[project]
name = "eventloop"
version = "0.1.0"
description = "Temporal application with event loop pattern"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
]

